syntax = "proto3";
option csharp_namespace = "gRPC";
package grpc;

import "Product.proto";
import "Customer.proto";

message CreateOrderRequest {
  int64 customerId = 1;
  int64 dateTimeOrdered = 2;
  bool isPacked = 3;
  int64 dateTimeSent = 4;
  repeated int64 productIds = 5;
}

message OrderResponse {
  int64 id = 1;
  CustomerResponse customer = 2;
  int64 dateTimeOrdered = 3;
  bool isPacked = 4;
  int64 dateTimeSent = 5;
  GetProductsResponse products = 6;
}

message GetOrderRequest {
  int64 id = 1;
}

message GetOrdersRequest {}

message GetOrdersResponse {
  repeated OrderResponse orders = 1;
}

service OrderGrpcService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
}
